# JohnDao

./: .firebaserc  .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  deploy-local.sh  deploy-prod.sh  dfx.json  firebase.json  firestore.rules  package-lock.json  settings.repl  storage.rules
extensions/: storage-resize-images.env
functions/: index.js  package-lock.json  package.json
functions/john_dao/: index.js  john_dao.did.d.ts
repl-tests/: exp.repl  stake.repl
src/backend/john_dao/: Cargo.toml  john_dao.did
src/backend/john_dao/src/: lib.rs  users.rs
src/frontend/: .eslintrc.cjs  canister_ids.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
src/frontend/src/: app.css  app.html
src/frontend/src/declarations/internet_identity/: internet_identity.did.d.ts
src/frontend/src/declarations/john_dao/: index.d.ts  john_dao.did.js
src/frontend/src/lib/: firebase.ts  stores.ts  types.ts  utils.ts
src/frontend/src/lib/components/: BottomNav.svelte  BottomPadding.svelte  CountDown.svelte  ImageModal.svelte  Label.svelte  LoginMethod.svelte  Masonry.svelte  ProposalCard.svelte  RewardAddress.svelte  RewardAddressUpdater.svelte  SideMenu.svelte  TweetProposalCreator.svelte  UsernameUpdater.svelte  VerificationStatus.svelte  WithdrawableBalance.svelte
src/frontend/src/lib/icons/: AccountIcon.svelte  AccountIconSolid.svelte  HomeIcon.svelte  HomeIconSolid.svelte  IcpIconWhite.svelte  LoaderIcon.svelte  PlusIcon.svelte  RankingIcon.svelte  RankingIconSolid.svelte  (+6 more)
src/frontend/src/routes/: +layout.svelte  +page.svelte
(+8 files in other folders)
