[package]
name = "john_dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.10"
serde = "1.0.163"
ciborium = "0.2"
num-traits = "0.2.15"
ic-ledger-types = "0.5.0"
ic-cdk-timers = "0.2.0"
